doc: Java 25